fixed mobile alignment issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/*****************/
-/* General Styles*/
-/*****************/
 @import 'https://fonts.googleapis.com/css?family=Lato:400,700';
 
 :root {
@@ -9,7 +6,20 @@
   --main-white: white;
 }
 
+/*****************/
+/* General Styles*/
+/*****************/
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
 html {
+  box-sizing: border-box;
   font-size: 10px;
   scroll-behavior: smooth;
   background-color: var(--main-white);
@@ -17,19 +27,16 @@ html {
 
 body {
   font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
 }
 
 h1 {
   font-size: 3.5rem;
 }
 
-p {
-  font-size: 1.6rem;
-}
-
 a {
-  color: black;
   text-decoration: none;
+  color: black;
 }
 
 .icon {
@@ -39,12 +46,12 @@ a {
 }
 
 /*****************/
-/* Header Styles*/
+/* Header Styles */
 /*****************/
 
 header {
   width: 100%;
-  height: 100px;
+  height: 80px;
   position: fixed;
   top: 0;
   z-index: 100;
@@ -55,7 +62,7 @@ header {
   background-color: var(--main-white);
 }
 
-.logo {
+header div.logo {
   height: 100%;
   display: flex;
   justify-content: center;
@@ -63,11 +70,10 @@ header {
   text-align: center;
 }
 
-.logo img {
+header div.logo img {
   width: 100%;
   height: 100%;
   max-width: 200px;
-  margin-left: 20px;
 }
 
 nav ul {
@@ -80,7 +86,8 @@ nav ul {
 }
 
 nav ul li a {
-  padding: 8px;
+  padding: 4px 8px;
+  border-radius: 10px;
   background-color: transparent;
   transition: background-color 0.5s, color 0.5s;
 }
@@ -107,8 +114,11 @@ nav ul li a:hover {
   nav ul {
     flex-direction: column;
   }
-  nav ul li {
+  /* nav ul li {
     padding-bottom: 5px;
+  } */
+  nav ul li a {
+    padding: 4px 8px;
   }
 }
 
@@ -117,34 +127,32 @@ nav ul li a:hover {
     position: absolute;
     top: 0;
     flex-wrap: wrap;
-    width: 90%;
-    height: 200px;
-    flex-direction: row;
-    background-color: var(--main-white);
   }
-  .logo {
-    position: relative;
-    top: 0;
+  div.logo {
     height: 100px;
-    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  div.logo img {
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
   nav {
-    padding: 0 50px;
-    align-items: center;
-    font-size: 1.9rem;
+    font-size: 1.6rem;
+    margin-top: 0;
   }
   nav ul {
-    /* list-style: none; */
     display: flex;
     flex-direction: column;
+    /* background-color: green; */
   }
   nav li {
-    padding-bottom: 5px;
+    padding: 0;
   }
-
-  /* header * {
-    border: 1px solid red;
-  } */
+  nav ul li a {
+    padding: 0px 8px 4px;
+  }
 }
 
 /*****************/
@@ -155,33 +163,60 @@ main {
   margin: 103px 30px 20px;
 }
 
-.hero {
+div.hero {
   text-align: center;
 }
 
-.quick-contact {
+div.hero h1 {
+  font-size: 3.9rem;
+}
+
+div.quick-contact {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.quick-contact * {
-  margin: auto 3px;
+div.quick-contact * {
+  margin: 8px 5px;
 }
 
 p.center {
   display: flex;
   align-items: center;
+  border-radius: 25px;
+  transition: background-color 0.5s, color 0.5s;
+}
+
+p.center a {
+  padding-right: 8px;
+}
+
+p.center:hover {
+  background-color: var(--logo-green);
+  color: white;
+}
+
+@media (max-width: 600px) {
+  div.quick-contact {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  div.quick-contact * {
+    margin: 4px auto;
+  }
 }
 
 .slideshow-container {
   max-width: 700px;
   position: relative;
-  margin: auto;
+  margin: 10px auto;
 }
 
 /* Hide the images by default */
 .slide {
+  padding: 0 auto;
   display: none;
 }
 
@@ -238,6 +273,11 @@ div.slide > img {
   top: 0;
 }
 
+.dots {
+  text-align: center;
+  width: 700px;
+}
+
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
@@ -256,7 +296,13 @@ div.slide > img {
 
 @media (max-width: 600px) {
   main {
-    margin-top: 215px;
+    margin-top: 145px;
+  }
+  iframe {
+    width: 80vw;
+  }
+  .dots {
+    width: 100%;
   }
 }
 
@@ -268,10 +314,11 @@ footer {
   margin: 10px 30px 30px;
 }
 
-.divide {
+div.divide {
   width: 100%;
   border: solid 4px var(--logo-green);
   border-radius: 3em;
+  margin-bottom: 15px;
 }
 
 .grid-container {
